src/tests/testfiles/binary-operators/4.txt
testfiles/binary-operators/4.c:2:9: error: invalid operands to comparison '!=' (have 'float' and 'int')
1.0 != 3;
    ^
